--- a/Ejercicio_5.html
+++ b/Ejercicio_5.html
@@ -6,13 +6,13 @@
     </head>
     <body style="background: rgb(135, 170, 222);">
             
-        <H1>Hola Mundo</H1>
+        <H1>Ejercicio 5</H1>
             
             <script type="text/javascript">
             let valor_startup =   parseFloat(prompt("Cual es el valor del Startup"));
             let valorventa  = (valor_startup / 2 )
             let valorfinal = valorventa - (valorventa * 0.16) 
-    alert("Memify / Mono para cada Socio: "+valorfinal);
+                alert("Memify / Mono para cada Socio: "+valorfinal);
             </script>
     </body>
 </html>
