--- a/Ejercicio_6.html
+++ b/Ejercicio_6.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background: rgb(135, 170, 222);">
             
-        <H1>Hola Mundo</H1>
+        <H1>Ejercicio 6</H1>
             
             <script type="text/javascript">
         let compu   =   parseFloat(prompt("Cuanto cuesta la Computadora: "));
