--- a/Ejercicio_1.html
+++ b/Ejercicio_1.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background: rgb(135, 170, 222);">
             
-        <H1>Hola Mundo</H1>
+        <H1>Ejercicio 1</H1>
             
             <script type="text/javascript">
                 let sueldo              =   prompt("¿Cual es tu sueldo?");
