--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background: rgb(135, 170, 222);">
             
-        <h1>Ejercicio 1</h1>
+        <H1>Hola Mundo</H1>
             
             <script type="text/javascript">
                 let sueldo              =   prompt("¿Cual es tu sueldo?");
